// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HouseNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="house_number"
      >
        Numer domu
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="Numer domu"
        name="house_number"
        placeholder="Numer domu"
        value="12345678900"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<HouseNumberField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Numer domu"
  name="house_number"
  placeholder="Numer domu"
  value=""
/>
`;

exports[`<HouseNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="house_number"
      >
        HouseNumber
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="HouseNumber"
        name="house_number"
        placeholder="Numer domu"
        value=""
      />
    </div>
  </form>
</div>
`;
